[package]
name = "vessel_viewer"
version = "0.1.11"
edition = "2024"

[profile.release]
debug = true

[dependencies]
wgpu = "28.0.0"
v4 = { git = "https://github.com/GameHunter101/V4-Engine" }
algoe = { git = "https://github.com/GameHunter101/Algoe" }
cool_utils = { git = "https://github.com/GameHunter101/cool_utils" }
tokio = "1.49.0"
nalgebra = "0.33.2"
bytemuck = "1.25.0"
winit = { version = "0.29.15" }
image = "0.25.9"
pollster = "0.4.0"
egui = "0.33.3"
